src/App.css
/* ================================================================ */
/* ============================ GLOBALS ============================== */
/* ================================================================ */
@import "./assets/css/input.css";
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");

:root {
  --blue: #007782;
  --light-grey: #edf2f2;
  --dark-grey: #5a6566;
  --grey: #999999;
}

body {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
}

.container {
  width: min(100% - 2rem, 1240px);
  /* width: 1240px; */
  margin: 0 auto;
}

main {
  min-height: calc(100vh - 52px);
}

h1 {
  font-size: 2.125rem;
}

p {
  color: var(--dark-grey);
}

button,
a {
  padding: 0.8em 1em;
  border-radius: 5px;
  cursor: pointer;
  text-wrap: nowrap;
}

.btn-filled {
  background: var(--blue);
  color: white;
  text-wrap: nowrap;
}

/* ================================================================ */
/* ============================ HEADER ============================== */
/* ================================================================ */

header {
  padding-block: 16px;

  .container {
    /* min-width: 1240px; */
    display: flex;
    align-items: center;
    gap: 50px;
  }

  /* height: 52px; real vinted */

  a:has(img),
  width {
    padding: 0;
    min-width: max-content;
  }
  img {
    width: 80px;
  }

  svg {
    min-width: max-content;
  }
  form {
    flex: 1;
  }
  form .search-bar {
    display: flex;
    background-color: var(--light-grey);
    color: var(--dark-grey);
    padding: 8px 10px;
    margin-block-end: 20px;
    gap: 8px;
    border-radius: 5px;

    input {
      width: 100%;
      border: none;
      background-color: var(--light-grey);
    }

    input:focus-visible {
      outline: none;
    }
  }
  .filters {
    display: flex;
    align-items: center;
    gap: 20px;
  }

  label {
    text-wrap: nowrap;
    font-size: 0.75rem;

    input[type="range"] {
      margin-inline: 10px;
      width: 70%;
    }
  }

  .price-filter {
    flex: 1;
  }

  nav {
    margin-inline: auto 0;
  }

  ul {
    display: flex;
    gap: 20px;

    a {
      border: 1px solid var(--blue);
      color: var(--blue);
    }

    li:last-child {
      margin-inline-start: 70px;
    }
  }
}

/* ================================================================ */
/* ============================ FORMS ============================== */
/* ================================================================ */

.signup,
.login {
  .container {
    max-width: 375px;
    border: 1px solid var(--light-grey);
    border-radius: 5px;
    padding: 0 16px;
    margin-block-start: 50px;
    color: var(--dark-grey);
  }

  h1 {
    font-size: 1.5rem;
    text-align: center;
    padding-block: 32px;
    color: black;
  }

  label:not(:last-of-type) {
    margin-block-end: 30px;
  }
  form {
    display: flex;
    flex-direction: column;
  }

  input {
    width: 100%;
    padding-block: 5px;
    border-width: 0 0 1px 0;
    border-color: var(--light-grey);
    outline: none;
  }

  span {
    font-size: 0.75rem;
    line-height: 1rem;
  }

  input[type="checkbox"] {
    width: 0;
    height: 0;
    margin: 0;
    display: inline;
    visibility: hidden;
  }

  span.checkbox {
    display: flex;
    justify-content: center;
    align-items: center;
    border: 1px solid var(--dark-grey);
    border-radius: 5px;
    width: 24px;
    height: 24px;

    svg {
      opacity: 0;
    }
  }
  p {
    display: inline-flex;
    align-items: center;
    gap: 10px;
  }

  input[type="checkbox"]:checked + p .checkbox {
    background-color: var(--blue);
    border-color: var(--blue);

    svg {
      color: white;
      opacity: 1;
    }
  }

  label:has(.checkbox) {
    margin-block-end: 5px;
  }

  .btn-filled {
    margin-block-start: 50px;
    text-align: center;
  }

  section > a:last-child {
    display: block;
    margin-block: 20px;
    color: var(--blue);
    font-size: 0.875rem;
    text-align: center;
  }
}

